--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                     </ul>
                 </nav>
                 <ul class="adress-block">
-                    <li class = "header-contact"><a class = "header-contact" href="mailto:info@devstudio.com">
+                    <li class = "header-contact-item"><a class = "header-contact" href="mailto:info@devstudio.com">
                         <svg viewBox="0 0 39 32" class = "header-contact-logo" >
                             <use xlink:href = "images/icons.svg#icon-envelope-hover"/>
                     </svg>info@devstudio.com</a></li>
-                    <li class = "header-contact"><a class = "header-contact" href="tel:+3809611111">
-                        <svg viewBox="0 0 39 32" class = "header-contact-logo">
+                    <li class = "header-contact-item"><a class = "header-contact" href="tel:+3809611111">
+                        <svg viewBox="0 0 19 32" class = "header-contact-logo phone">
                             <use xlink:href = "images/icons.svg#icon-smartphone"/>
                     </svg>+3809611111</a></li>
                 </ul>
@@ -36,7 +36,7 @@
         <section class="title">
             <div class="container">
                 <h1 class="solutions-for-buisness"> Ефективні рішення для вашого бізнесу</h1>
-                <button type = button class="HeroButton"> Замовити послугу</button>
+                <button type = button class="HeroButton" data-modal-open = "#modal-window"> Замовити послугу</button>
             </div> 
         </div>
     </div>
@@ -110,23 +110,29 @@
                     <h3 class="programmers-name">Ігор Дем'яненко</h3>
                     <p class="work">Product Designer</p> 
                     <div class="social-networks">
-                        <a href="#">
-                    <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                        <use xlink:href = "images/icons.svg#icon-instagram"/>
-                     </svg></a>
-                     <a href="#">
-                     <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                        <use xlink:href = "images/icons.svg#icon-twitter"/>
-                     </svg></a>
-                     <a href="#">
-                     <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                        <use xlink:href = "images/icons.svg#icon-facebook"/>
-                     </svg> </a>
-                     <a href="#">
-                     <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                        <use xlink:href = "images/icons.svg#icon-linkedin2"/>
-                     </svg></a>
-                    </div>   
+                        <ul class="social-networks-list">
+                        <li><a href="#">
+                        <svg  viewBox="0 0 64 32" class = "social-networks-logo">
+                            <use xlink:href = "images/icons.svg#icon-instagram"/>
+                         </svg></a>
+                        </li>
+                        <li>
+                         <a href="#">
+                         <svg  viewBox="0 0 64 32" class = "social-networks-logo">
+                            <use xlink:href = "images/icons.svg#icon-twitter"/>
+                         </svg></a></li>
+                         <li>
+                         <a href="#">
+                         <svg  viewBox="0 0 64 32" class = "social-networks-logo">
+                            <use xlink:href = "images/icons.svg#icon-facebook"/>
+                         </svg></a></li>
+                         <a href="#">
+                            <li>
+                         <svg  viewBox="0 0 64 32" class = "social-networks-logo">
+                            <use xlink:href = "images/icons.svg#icon-linkedin2"/>
+                         </svg></a></li>
+                        </ul>
+                        </div>  
                 </div>
                 </li>
                 <li class= "worker-card">
@@ -135,22 +141,28 @@
                     <h3 class="programmers-name">Ольга Рєпіна</h3>
                     <p class="work">Developer</p>
                     <div class="social-networks">
-                        <a href="#">
+                        <ul class="social-networks-list">
+                        <li><a href="#">
                         <svg  viewBox="0 0 64 32" class = "social-networks-logo">
                             <use xlink:href = "images/icons.svg#icon-instagram"/>
                          </svg></a>
+                        </li>
+                        <li>
                          <a href="#">
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
                             <use xlink:href = "images/icons.svg#icon-twitter"/>
-                         </svg></a>
+                         </svg></a></li>
+                         <li>
                          <a href="#">
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
                             <use xlink:href = "images/icons.svg#icon-facebook"/>
-                         </svg></a>
+                         </svg></a></li>
                          <a href="#">
+                            <li>
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
                             <use xlink:href = "images/icons.svg#icon-linkedin2"/>
-                         </svg></a>
+                         </svg></a></li>
+                        </ul>
                         </div>
                         </div>
                 </li>     
@@ -160,23 +172,29 @@
                     <h3 class="programmers-name">Микола Тарасов</h3>
                     <p class="work">Marketing</p>
                     <div class="social-networks">
-                        <a href="#">
+                        <ul class="social-networks-list">
+                        <li><a href="#">
                         <svg  viewBox="0 0 64 32" class = "social-networks-logo">
                             <use xlink:href = "images/icons.svg#icon-instagram"/>
                          </svg></a>
+                        </li>
+                        <li>
                          <a href="#">
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
                             <use xlink:href = "images/icons.svg#icon-twitter"/>
-                         </svg></a>
+                         </svg></a></li>
+                         <li>
                          <a href="#">
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
                             <use xlink:href = "images/icons.svg#icon-facebook"/>
-                         </svg></a>
+                         </svg></a></li>
                          <a href="#">
+                            <li>
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
                             <use xlink:href = "images/icons.svg#icon-linkedin2"/>
-                         </svg></a>
-                        </div> 
+                         </svg></a></li>
+                        </ul>
+                        </div>
                 </div>
                 </li>
                 <li class= "worker-card"> 
@@ -186,23 +204,29 @@
                     <h3 class="programmers-name">Михайло Єрмаков</h3>
                     <p class="work">UI Designer</p>
                     <div class="social-networks">
-                        <a href="#">
+                        <ul class="social-networks-list">
+                        <li><a href="#">
                         <svg  viewBox="0 0 64 32" class = "social-networks-logo">
                             <use xlink:href = "images/icons.svg#icon-instagram"/>
                          </svg></a>
+                        </li>
+                        <li>
                          <a href="#">
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
                             <use xlink:href = "images/icons.svg#icon-twitter"/>
-                         </svg></a>
+                         </svg></a></li>
+                         <li>
                          <a href="#">
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
                             <use xlink:href = "images/icons.svg#icon-facebook"/>
-                         </svg></a>
+                         </svg></a></li>
                          <a href="#">
+                            <li>
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
                             <use xlink:href = "images/icons.svg#icon-linkedin2"/>
-                         </svg></a>
-                        </div>   
+                         </svg></a></li>
+                        </ul>
+                        </div>
                 </div>
                 
                 </li>
@@ -313,10 +337,14 @@
         </ul>
     </div>
     </footer>
-    <div class ="overlay">
-            <div class="modal">
-                
+    <div class = "modal-window is-hidden" data-modal>
+            <div class="modal-container">
+                <button class="close" data-modal-close ="#modal-window">
+wef[we'wef]
+                </button>
             </div>
             </div>
+            <script src="js/modal.js"></script>
+
 </body>
 </html>
