--- a/portfolio.html
+++ b/portfolio.html
@@ -19,12 +19,12 @@
                 </ul>
             </nav>
             <ul class="adress-block">
-                <li class = "header-contact"><a class = "header-contact" href="mailto:info@devstudio.com">
+                <li class = "header-contact-item"><a class = "header-contact" href="mailto:info@devstudio.com">
                     <svg viewBox="0 0 39 32" class = "header-contact-logo" >
                         <use xlink:href = "images/icons.svg#icon-envelope-hover"/>
                 </svg>info@devstudio.com</a></li>
-                <li class = "header-contact"><a class = "header-contact" href="tel:+3809611111">
-                    <svg viewBox="0 0 39 32" class = "header-contact-logo">
+                <li class = "header-contact-item"><a class = "header-contact" href="tel:+3809611111">
+                    <svg viewBox="0 0 19 32" class = "header-contact-logo">
                         <use xlink:href = "images/icons.svg#icon-smartphone"/>
                 </svg>+3809611111</a></li>
             </ul>
@@ -178,5 +178,5 @@
         </ul>
     </div>
     </footer>
-
+    <script src="./js/modal.js"></script>
 </body>
