--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <a  href="#" class="header-logo"><span class="BlueLogo">Web</span>Studio</a>
                 <nav class="menu">
                     <ul>
-                        <li><a class = "NavigationMenu active" href="index.html">Студія</a></li>
-                        <li><a class = "NavigationMenu" href="portfolio.html">Портфоліо</a></li>
-                        <li><a class = "NavigationMenu" href="#">Контакти</a></li>
+                        <li class="menu-item"><a class = "NavigationMenu active" href="index.html">Студія</a></li>
+                        <li class="menu-item"><a class = "NavigationMenu" href="portfolio.html">Портфоліо</a></li>
+                        <li class="menu-item"><a class = "NavigationMenu" href="#">Контакти</a></li>
                     </ul>
                 </nav>
                 <ul class="adress-block">
@@ -96,9 +96,17 @@
                 Чим ми займаємось
             </h2>
             <ul class = "work-list">
-                <li class = "work-item"><img src="images/img-4.jpg" width="324"  alt="Програмування"></li>
-                <li class = "work-item"><img src="images/img-5.jpg" width="324"  alt="UI/UX розробка"></li>
-                <li class = "work-item"><img src="images/img-6.jpg" width="324"  alt="Дизайн"></li>
+                <li class = "work-item"><img src="images/img-4.jpg" width="370"  alt="Програмування">
+                    <label class = "work-desc">
+                        десктопні додатки
+                    </label>
+                </li>
+                <li class = "work-item"><img src="images/img-5.jpg" width="370"  alt="UI/UX розробка"><label class = "work-desc">
+                    мобільні додатки
+                </label></li>
+                <li class = "work-item"><img src="images/img-6.jpg" width="370"  alt="Дизайн"><label class = "work-desc">
+                    дизайнерські рішення
+                </label></li>
             </ul>
         </section>
         <section class = workers>
@@ -332,19 +340,19 @@
         </a>
         </li>
         </ul>
-
         </li>
         </ul>
     </div>
     </footer>
-    <div class = "modal-window is-hidden" data-modal>
+    <div data-modal class = "modal-window is-hidden">
             <div class="modal-container">
-                <button class="close" data-modal-close ="#modal-window">
-wef[we'wef]
+                <button data-modal-close ="#modal-window" class="close">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 18 18" fill="none">
+                        <path d="M15 4.10786L13.8921 3L9.5 7.39214L5.10786 3L4 4.10786L8.39214 8.5L4 12.8921L5.10786 14L9.5 9.60786L13.8921 14L15 12.8921L10.6079 8.5L15 4.10786Z" fill="black"/>
+                        </svg>
                 </button>
             </div>
             </div>
             <script src="js/modal.js"></script>
-
 </body>
 </html>
