--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
                 </li>
 
 
-                <<li class="projects">
+                <li class="projects">
                     <a class = "link" href="#">
                         <div class="projects-cover-wrap">    
                         <img src="images/img2pgimg-4.jpg" alt="Технокряк" width="370" height="294">
@@ -127,7 +127,7 @@
                    
                     </a>
                 </li>
-                <<li class="projects">
+                <li class="projects">
                     <a class = "link" href="#">
                         <div class="projects-cover-wrap">    
                         <img src="images/img2pgimg-6.jpg" alt="Технокряк" width="370" height="294">
@@ -215,6 +215,18 @@
         </a>
         </li>
         </ul>
+        </li>
+        <li class="footer-block-item sub-section">
+            <label class="sub-title">підпишіться на розсилку</label>
+            <div class="sub-container">
+            <input type="text" placeholder="E-mail" class = "footer-input" name="">
+            <button class="subscribe-button" type = "submit">
+                Підписатися
+                <svg  viewBox="0 0 31 32" class = "subscribe-svg">
+                    <use xlink:href = "images/icons.svg#icon-icon-send"/>
+                 </svg>
+            </button>
+        </div>
         </li>
         </ul>
     </div>
