--- a/portfolio.html
+++ b/portfolio.html
@@ -171,64 +171,65 @@
     </main>
     <footer>
         <div class="container">
-        <ul class="footer-block-list">
-    
-      <li class="footer=block-item">  
-        <a class = "footer-logo" href="#" ><span class="BlueLogo">Web</span>Studio</a>
-        <address class = "footer-contact-list">
-            <p class = "adress">м.Київ, вул.Лесі Українки, 26</p>
-            <p><a class = "footer-contact email" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-            <p><a class = "footer-contact number" href="tel:+3809611111">+3809611111</a></p>
-        </address>
-    </li>
-    <li class="footer=block-item">
-        <h3 class="social-networks-title">приєднуйтесь</h3>
-        <ul class="footer-logo-list">
-        <li class="footer-logo-item">
-            <a href="#">
-            <svg  viewBox="0 0 88 44" class = "footer-social-networks-logo">
-            <use xlink:href = "images/icons.svg#icon-instagram"/>
-         </svg>
-        </a>
-        </li>
-        <li class="footer-logo-item">
-            <a href="#">
-         <svg  viewBox="0 0 88 44" class = "footer-social-networks-logo">
-            <use xlink:href = "images/icons.svg#icon-twitter"/>
-         </svg>
-        </a>
-        </li>
-        
-        <li class="footer-logo-item">
-            <a href="#">
-         <svg  viewBox="0 0 88 44" class = "footer-social-networks-logo">
-            <use xlink:href = "images/icons.svg#icon-facebook"/>
-         </svg>
-        </a>
-        </li>
+            <div class="footer-container">
+                <div class="footer-block-item">
+                    <a class="footer-logo" href="#"><span class="BlueLogo">Web</span>Studio</a>
+                    <address class="footer-contact-list">
+                        <p class="adress">м.Київ, вул.Лесі Українки, 26</p>
+                        <p><a class="footer-contact email" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+                        <p><a class="footer-contact number" href="tel:+3809611111">+3809611111</a></p>
+                    </address>
+                </div>
+                <div class="footer-block-item">
+                    <h3 class="social-networks-title">приєднуйтесь</h3>
+                    <ul class="footer-logo-list">
+                        <li class="footer-logo-item">
+                            <a href="#">
+                                <svg viewBox="0 0 88 44" class="footer-social-networks-logo">
+                                    <use xlink:href="images/icons.svg#icon-instagram" />
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-logo-item">
+                            <a href="#">
+                                <svg viewBox="0 0 88 44" class="footer-social-networks-logo">
+                                    <use xlink:href="images/icons.svg#icon-twitter" />
+                                </svg>
+                            </a>
+                        </li>
 
-        <li class="footer-logo-item">
-        <a href="#">
-         <svg  viewBox="0 0 88 44" class = "footer-social-networks-logo">
-            <use xlink:href = "images/icons.svg#icon-linkedin2"/>
-         </svg>
-        </a>
-        </li>
-        </ul>
-        </li>
-        <li class="footer-block-item sub-section">
-            <label class="sub-title">підпишіться на розсилку</label>
-            <div class="sub-container">
-            <input type="text" placeholder="E-mail" class = "footer-input" name="">
-            <button class="subscribe-button" type = "submit">
-                Підписатися
-                <svg  viewBox="0 0 31 32" class = "subscribe-svg">
-                    <use xlink:href = "images/icons.svg#icon-icon-send"/>
-                 </svg>
-            </button>
+                        <li class="footer-logo-item">
+                            <a href="#">
+                                <svg viewBox="0 0 88 44" class="footer-social-networks-logo">
+                                    <use xlink:href="images/icons.svg#icon-facebook" />
+                                </svg>
+                            </a>
+                        </li>
+
+                        <li class="footer-logo-item">
+                            <a href="#">
+                                <svg viewBox="0 0 88 44" class="footer-social-networks-logo">
+                                    <use xlink:href="images/icons.svg#icon-linkedin2" />
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                    <div class="footer-block-item">
+                <form class="footer-block-item sub-section">
+                    <h3 class="sub-title">підпишіться на розсилку</h3>
+                    <div class="sub-container">
+                        <input type="text" placeholder="E-mail" class="footer-input" id="email">
+                        <button class="subscribe-button" type="submit">
+                            Підписатися
+                            <svg viewBox="0 0 31 32" class="subscribe-svg">
+                                <use xlink:href="images/icons.svg#icon-icon-send" />
+                            </svg>
+                        </button>
+                    </div>
+                <form>
+                </div>
+            </div>
         </div>
-        </li>
-        </ul>
-    </div>
     </footer>
 </body>
